@@ -1,3 +1,7 @@
+2008-11-21  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* buff-menu.el (Buffer-menu-short-ellipsis): Partly undo last change.
+
 2008-11-20  Juanma Barranquero  <lekktu@gmail.com>
 
 	* international/mule-util.el (set-nested-alist): Doc fix.  Use `when'.
